Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58160

QStringListModel doesn't follow the default role of other models

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.9
    • 5.7.1
    • Widgets: Itemviews
    • None

    Description

      When reimplementing QAbstractItemModel::data QStringListModel doesn't set the default value for the role argument as other models do (including the base class).
      I'm currently working with 5.7, but I peŠµked at the source for the dev branch and it applies to it as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            kshegunov Konstantin Shegunov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes