QStringListModel: default data()s 'role' argument

... the way it's done elsewhere, too.

Change-Id: Icbb6802c2244469cda7db7eb9e088cf3b7729c89
Task-number: QTBUG-58160
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>